--- a/mail/notification.html
+++ b/mail/notification.html
@@ -16,7 +16,7 @@
 
     <p class="text" style="font-family: 'Roboto', sans-serif; width: 450px; max-width: 90%; height: auto; display: block; font-size: 20px; font-weight: 500; line-height: 22px; text-align: center; color: #011627; margin: 50px auto 25px; padding: 0;" align="center">Someone mentioned you in a Freech chat. Join now, to participate in the conversation.</p>
 
-    <a href="{url-chat}" class="button" style="font-family: 'Roboto', sans-serif; width: 200px; height: 50px; display: block; position: relative; font-size: 20px; font-weight: 700; line-height: 50px; text-decoration: none; text-align: center; text-transform: uppercase; color: #fff; border-radius: 10px; cursor: pointer; background-color: rgba(0,0,0,0.5); margin: 25px auto 30px; padding: 0 25px;">JOIN CHAT</a>
+    <a href="{url-chat}" class="button" style="font-family: 'Roboto', sans-serif; width: 200px; height: 50px; display: block; position: relative; font-size: 20px; font-weight: 700; line-height: 50px; text-decoration: none; text-align: center; text-transform: uppercase; color: #fff; border-radius: 10px; cursor: pointer; background-color: #717171; margin: 25px auto 30px; padding: 0 25px;">JOIN CHAT</a>
 
     <p class="footer" style="font-family: 'Roboto', sans-serif; width: 450px; max-width: 90%; height: auto; display: block; font-size: 15px; font-weight: 500; line-height: 22px; text-align: center; color: rgba(0,0,0,0.3); margin: 30px auto 25px; padding: 0;" align="center"><a href="{url-unsubscribe}" style="font-family: 'Roboto', sans-serif; font-weight: 600; text-decoration: underline; color: rgba(0,0,0,0.3); margin: 0; padding: 0;">Unsubscribe</a> to stop receiving these notifications.</p>
 
