--- a/web/index.html
+++ b/web/index.html
@@ -25,45 +25,37 @@
       <!-- Easy Chats -->
       <div class="feature chat">
         <span class="icon"></span>
-        <h1>Open Chats</h1>
+        <h1>Simple Chats</h1>
         <p>Anyone can create a chat and invite his friends using an URL. A browser is all you need to participate.</p>
         <a href="/chat" class="button">Open Your Own Chat</a>
       </div>
-      <!-- Privacy -->
-      <div class="feature mask">
-        <span class="icon"></span>
-        <h1>True Privacy</h1>
-        <p>Choose a name. Be who you want. Know that the chat will disappear tomorrow.</p>
-        <a href="/chat" class="button">Become Sherlock Holmes</a>
-      </div>
       <!-- Attachments -->
-      <div class="feature camera">
+      <div class="feature file">
         <span class="icon"></span>
-        <h1>Attach Images</h1>
-        <p>Easily share images with everyone in the chat.</p>
-        <a href="/chat" class="button">Share Picture With Your Friends</a>
+        <h1>Attach Files</h1>
+        <p>Easily share files of any kind with everyone in the chat.</p>
+        <a href="/chat" class="button">Share Files With Your Friends</a>
       </div>
       <!-- Security -->
-      <!--div class="feature lock">
+      <div class="feature lock">
         <span class="icon"></span>
         <h1>Built In Security</h1>
         <p>All chats use modern SSL encryption and automatically protect you against identity theft.</p>
         <a href="/chat" class="button">Encrypt Some Messages</a>
-      </div-->
+      </div>
       <!-- Open Source -->
-      <!--div class="feature laptop">
+      <div class="feature mask">
         <span class="icon"></span>
         <h1>Open Source</h1>
-        <p>All of Freech's code is openly accessible. Read it, tinker with it, and help us improve it if you want.</p>
-        <a href="/" class="button">View Source Code</a>
-      </div-->
+        <p>All of Freech's code is openly accessible. Read it, tinker with it, and build something amazing it if you want.</p>
+        <a href="https://github.com/dyedgreen/Freech" target="_blank" class="button">View Source Code</a>
+      </div>
     </div>
 
     <!-- Footer Links -->
     <div class="footer">
       <a href="/chat">Create a chat</a>
-      <a href="/">Terms and conditions</a>
-      <a href="/">Privacy</a>
+      <a href="https://github.com/dyedgreen/Freech" target="_blank">View GitHub repository</a>
     </div>
   </body>
 
